--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -5,7 +5,8 @@
 @import "themes/orange";
 
 .app,
-.app_modal {
+.app_modal,
+.app_drawer {
     font: var(--font-m);
     color: var(--primary-color);
 }
@@ -21,5 +22,23 @@
 
 .page-wrapper {
     flex-grow: 1;
-    padding: 20px;
+    padding: 20px 20px 20px 45px;
+    height: calc(100vh - var(--navbar-height));
+    overflow: auto;
+    width: 100%;
+}
+
+*::-webkit-scrollbar {
+    width: 12px;               /* ширина scrollbar */
+    height: 8px;
+}
+
+*::-webkit-scrollbar-track {
+    background: var(--card-bg);        /* цвет дорожки */
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: var(--inverted-primary-color);    /* цвет плашки */
+    border-radius: 20px;       /* закругления плашки */
+    border: 2px solid var(--primary-color);  /* padding вокруг плашки */
 }
