--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -25,7 +25,7 @@
     padding: 20px 20px 20px 45px;
     height: calc(100vh - var(--navbar-height));
     overflow: auto;
-    width: 100%;
+    flex-shrink: 100;
 }
 
 *::-webkit-scrollbar {
