--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -5,8 +5,7 @@
 @import "themes/orange";
 
 .app,
-.app_modal,
-.app_drawer {
+.app_modal {
     font: var(--font-m);
     color: var(--primary-color);
 }
@@ -18,27 +17,4 @@
 
 .content-page {
     display: flex;
-}
-
-.page-wrapper {
-    flex-grow: 1;
-    padding: 20px 20px 20px 45px;
-    height: calc(100vh - var(--navbar-height));
-    overflow: auto;
-    flex-shrink: 100;
-}
-
-*::-webkit-scrollbar {
-    width: 12px;               /* ширина scrollbar */
-    height: 8px;
-}
-
-*::-webkit-scrollbar-track {
-    background: var(--card-bg);        /* цвет дорожки */
-}
-
-*::-webkit-scrollbar-thumb {
-    background-color: var(--inverted-primary-color);    /* цвет плашки */
-    border-radius: 20px;       /* закругления плашки */
-    border: 2px solid var(--primary-color);  /* padding вокруг плашки */
 }
