--- a/src/entities/Article/ui/ArticleList/ArticleList.module.scss
+++ b/src/entities/Article/ui/ArticleList/ArticleList.module.scss
@@ -1,11 +1,46 @@
+.ArticleList {
+    display: contents;
+    height: 100%;
+}
+
 .BIG {
+    .card {
+        margin-bottom: 30px 30px 0;
+    }
+}
+
+.SMALL {
     .card {
         margin-bottom: 30px;
     }
 }
 
-.SMALL {
+.itemsWrapper {
     display: flex;
     flex-wrap: wrap;
-    gap: 30px;
+    justify-content: space-between;
+    gap: 9px;
+    margin: 0 30px;
+
+}
+
+.skeleton {
+    padding-bottom: 30px;
+}
+
+.ItemContainer {
+    width: 230px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 8px;
+    margin-right: 30px;
+
+    // @media (max-width 1024px) {
+    //     width: 50%;
+    // }
+
+    // @media (max-width 300px) {
+    //     width: 100%;
+    // }
 }
